# log_analytics_agent

./: .env.template  .gitignore  README.md  agent.py  agent_instruction.txt  ap_runtime.py  conversational_analytics.py  pyproject.toml
agent_platform/: agent_runtime.py
tests/: test_deployed_agent_genai.py  test_via_rest.py
